# libse

./: .gitignore  LICENSE  Makefile.am  README  README.md  autogen.sh  configure.ac  index.html
bench/: LOG  explicit_loop_bench.cpp  fib_005_safe_bench.cpp  fib_005_unsafe_bench.cpp  fib_006_safe_bench.cpp  fib_006_unsafe_bench.cpp  fib_007_safe_bench.cpp  fib_007_unsafe_bench.cpp  fib_008_safe_bench.cpp  fib_008_unsafe_bench.cpp  fib_009_safe_bench.cpp  fib_009_unsafe_bench.cpp  fib_safe_bench.cpp  fib_unsafe_bench.cpp  if_bench.cpp  implicit_loop_bench.cpp  loop_bench.cpp  queue_010_safe_bench.cpp  queue_010_unsafe_bench.cpp  stack_007_slice_safe_bench.cpp  stack_007_slice_unsafe_bench.cpp  stateful01_safe_bench.cpp  stateful01_unsafe_bench.cpp  strict_total_order_with_distinct_safe_bench.cpp  strict_total_order_with_distinct_unsafe_bench.cpp  strict_total_order_with_eager_injection_safe_bench.cpp  strict_total_order_with_eager_injection_unsafe_bench.cpp  strict_total_order_with_lazy_injection_safe_bench.cpp  strict_total_order_with_lazy_injection_unsafe_bench.cpp  strict_total_order_with_or_safe_bench.cpp  strict_total_order_with_or_unsafe_bench.cpp  strict_total_orders_with_distinct_safe_bench.cpp  strict_total_orders_with_distinct_unsafe_bench.cpp  sups_safe_bench.cpp  sups_unsafe_bench.cpp
bench/vs_cbmc/: LOG  explicit_loop_cbmc.c  explicit_loop_se.cpp  explicit_loop_sp.cpp  for_loop_se.cpp  implicit_loop_cbmc.c  implicit_loop_se.cpp  implicit_loop_sp.cpp  while_loop_se.cpp
cbmc-patches/: quadratic_size_po.diff
doc/: Doxyfile.in
include/: any.h  concurrency.h  concurrent.h  eval.h  expr.h  if.h  instr.h  interpreter.h  libse.h  loop.h  memory.h  op.h  overload.h  reflect.h  se  se.h  sequential-se  sequential-se.h  sp  sp.h  symtracer.h  tester.h  tracer.h  value.h  var.h  visitor.h
include/concurrency/: event.h  instr.h  relation.h
include/concurrent/: block.h  encoder.h  encoder_c0.h  event.h  instr.h  memory.h  mutex.h  path_condition.h  recorder.h  relation.h  slice.h  slicer.h  tag.h  thread.h  var.h  zone.h
include/core/: eval.h  op.h  type.h
src/: any.cpp  concurrency.cpp  concurrent.cpp  expr.cpp  if.cpp  libse.cpp  loop.cpp  op.cpp  reflect.cpp  symtracer.cpp  tester.cpp  tracer.cpp  value.cpp  var.cpp
src/concurrency/: event.cpp
src/concurrent/: encoder.cpp  encoder_c0.cpp  event.cpp  memory.cpp  path_condition.cpp  recorder.cpp  relation.cpp  tag.cpp  thread.cpp  zone.cpp
src/core/: op.cpp
test/: any_test.cpp  concurrency_test.cpp  concurrent_test.cpp  eval_test.cpp  expr_test.cpp  functional_test.cpp  if_test.cpp  instr_test.cpp  interpreter_test.cpp  loop_test.cpp  memory_test.cpp  multi_path_functional_test.cpp  op_test.cpp  reflect_test.cpp  simplify_test.cpp  single_path_functional_test.cpp  symtracer_test.cpp  tester_functional_test.cpp  tracer_test.cpp  value_test.cpp  var_test.cpp  version_test.cpp  visitor_test.cpp
test/concurrency/: event_test.cpp  instr_test.cpp  memory_test.cpp  relation_test.cpp
test/concurrent/: block_test.cpp  encoder_c0_test.cpp  encoder_test.cpp  event_test.cpp  instr_test.cpp  (+12 more)
v0.2/: annotated.html  classes.html  classse_1_1_abstract_value-members.html  classse_1_1_abstract_value.html  classse_1_1_abstract_var-members.html  classse_1_1_abstract_var.html  classse_1_1_any_expr-members.html  classse_1_1_any_expr.html  classse_1_1_bounded_unwinding_policy-members.html  classse_1_1_bounded_unwinding_policy.html  classse_1_1_cast_expr-members.html  classse_1_1_cast_expr.html  classse_1_1_expr-members.html  classse_1_1_expr.html  classse_1_1_if-members.html  classse_1_1_if.html  classse_1_1_if_then_else_expr-members.html  classse_1_1_if_then_else_expr.html  classse_1_1_interpreter.html  classse_1_1_loop-members.html  classse_1_1_loop.html  classse_1_1_nary_expr-members.html  classse_1_1_nary_expr.html  classse_1_1_operator_info.html  classse_1_1_operator_info_3_01_a_d_d_01_4-members.html  classse_1_1_operator_info_3_01_a_d_d_01_4.html  classse_1_1_operator_info_3_01_e_q_l_01_4-members.html  classse_1_1_operator_info_3_01_e_q_l_01_4.html  classse_1_1_operator_info_3_01_l_a_n_d_01_4-members.html  classse_1_1_operator_info_3_01_l_a_n_d_01_4.html  classse_1_1_operator_info_3_01_l_o_r_01_4-members.html  classse_1_1_operator_info_3_01_l_o_r_01_4.html  classse_1_1_operator_info_3_01_l_s_s_01_4-members.html  classse_1_1_operator_info_3_01_l_s_s_01_4.html  classse_1_1_operator_info_3_01_n_o_t_01_4-members.html  classse_1_1_operator_info_3_01_n_o_t_01_4.html  classse_1_1_sp_interpreter-members.html  classse_1_1_sp_interpreter.html  classse_1_1_tracer-members.html  classse_1_1_tracer.html  (+67 more)
v1.0-unstable/: annotated.html  block_8h_source.html  classes.html  classse_1_1_base_decl_var-members.html  classse_1_1_base_decl_var.html  classse_1_1_basic_read_instr-members.html  classse_1_1_basic_read_instr.html  classse_1_1_binary_read_instr-members.html  classse_1_1_binary_read_instr.html  classse_1_1_block-members.html  classse_1_1_block.html  classse_1_1_decl_var-members.html  classse_1_1_decl_var.html  classse_1_1_decl_var_3_01_t[_n]_4-members.html  classse_1_1_decl_var_3_01_t[_n]_4.html  classse_1_1_deref_read_instr_3_01_t[_n]_00_01_u_01_4-members.html  classse_1_1_deref_read_instr_3_01_t[_n]_00_01_u_01_4.html  classse_1_1_direct_write_event-members.html  classse_1_1_direct_write_event.html  classse_1_1_event-members.html  classse_1_1_event.html  classse_1_1_indirect_write_event-members.html  classse_1_1_indirect_write_event.html  classse_1_1_literal_read_instr-members.html  classse_1_1_literal_read_instr.html  classse_1_1_literal_read_instr_3_01_t[_n]_4-members.html  classse_1_1_literal_read_instr_3_01_t[_n]_4.html  classse_1_1_local_memory-members.html  classse_1_1_local_memory.html  classse_1_1_local_read-members.html  classse_1_1_local_read.html  classse_1_1_local_var-members.html  classse_1_1_local_var.html  classse_1_1_loop-members.html  classse_1_1_loop.html  classse_1_1_loop_policy-members.html  classse_1_1_loop_policy.html  classse_1_1_memory-members.html  classse_1_1_memory.html  classse_1_1_memory_addr-members.html  (+118 more)
(+126 files in other folders)
